# novapay-support-agent

./: .gitignore  NovaPay_Interview_FAQ.docx  README.md  app.py  generate_faq_doc.py  integration_test.py  projectplan.txt  pyproject.toml  requirements-train.txt  requirements.txt
agents/: base_specialist.py  billing_agent.py  orchestrator.py  refund_agent.py  technical_agent.py  triage_agent.py
common/: __init__.py  config.py  llm.py  logging_utils.py  parsing.py
dashboard/: metrics_tracker.py
data/: prepare_specialist_data.py  prepare_triage_data.py
data/knowledge_base/: billing_guide.txt  escalation_matrix.txt  refund_policy.txt  technical_faq.txt
data/processed/: specialist_conversations_billing.jsonl  specialist_conversations_refund.jsonl  specialist_conversations_technical.jsonl  triage_test.jsonl  triage_train.jsonl
data/raw/: triage_billing_raw.jsonl  triage_refund_raw.jsonl  triage_technical_raw.jsonl
evaluation/: ab_comparison.py  ab_results.json  bertscore_eval.py  bertscore_results.json  judge_log.jsonl  llm_judge.py
fine_tuning/: dpo_stub.py  evaluate_triage.py  prepare_data.py  train_triage.py
rag/: __init__.py  build_vectorstore.py  retriever.py
robustness/: adversarial_results.json  adversarial_tester.py  hallucination_detector.py  latency_profiler.py  latency_results.json
